# updoc

./: .env  .gitignore  Cargo.toml
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20230513_035912_create_file.rs  m20230513_052601_create_session.rs
src/: error.rs  main.rs
src/config/: app_state.rs  config.rs  db.rs  jwt.rs  mod.rs  redis.rs  redis_handler.rs
src/controllers/: auth.rs  file.rs  mod.rs  ws.rs
src/managers/: filesocket.rs  mod.rs  unitsocket.rs  websocketmanager.rs
src/middlewares/: auth.rs
src/models/: file.rs  mod.rs  prelude.rs  session.rs  users.rs
src/routers/: auth.rs  file.rs
src/schemas/: mod.rs  response.rs  ws.rs
src/schemas/auth/: signup.rs
src/schemas/file/: create.rs  update.rs
