[package]
name = "updoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version="0.6.20",features = ["ws"]}
tokio = { version = "1.28.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.12", features = ["derive"] }
sea-orm = { version = "^0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros","postgres-array" ] }
dotenvy = "0.15.7"
lazy_static = "1.4.0"
dotenvy_macro = "0.15.7"
migration = { path = "migration"}
bcrypt = "0.14.0"
jsonwebtoken = "8"
uuid = "1.3.2"
serde_with = "3.0.0"
redis = { version = "0.23.3", features = ["tokio-comp"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
futures = "0.3"






